bk_ida/gccida/g2/compare_tree_int
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_tree_int/src/tree.c:4160:17: error: expected expression
v2 = *( _OWORD *)&t->block.vars; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_tree_int/src/tree.c:4160:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&t->block.vars; 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_tree_int/src/obj/tree.o] Error 1
